--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <section class="principal container">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="img/LOGO.webp" alt="O combo+ é a junção do alura+ e o alura língua">
+        <h1>HeFlix.</h1>
+        <h2>Seu Streaming preferido!</h2>
     </section>
 </body>
 
