--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="principal container">
-        <img src="img/LOGO.webp" alt="O combo+ é a junção do alura+ e o alura língua">
+        <img src="img/LOGO.webp" alt="HEFLIX">
         <h1>HeFlix.</h1>
         <h2>Seu Streaming preferido!</h2>
     </section>
