--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>HeFlix.</h1>
         <h2>Seu Streaming preferido!</h2>
     </section>
+<button>Assistir Agora!</button>
 </body>
 
 </html>
