--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="principal container">
         <img src="img/LOGO.webp" alt="HEFLIX">
         <h1>HeFlix.</h1>
-        <h2>Seu Streaming preferido!</h2>
+        <h2>Seu Streaming preferido!</h2><br><br><br><br><br><br><br>
+        <button>Assistir Agora!</button>
     </section>
-<button>Assistir Agora!</button>
 </body>
 
 </html>
