--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <img src="img/LOGO.webp" alt="HEFLIX">
         <h1>HeFlix.</h1>
         <h2>Seu Streaming preferido!</h2><br><br><br><br><br><br><br>
-        <button>Assistir Agora!</button>
+        <div class="box">
+            <button>Assistir Agora!</button>
+        </div>
     </section>
 </body>
 
