--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <h1>HeFlix.</h1>
         <h2>Seu Streaming preferido!</h2><br><br><br><br><br><br><br>
         <div class="box">
+            <form action="/action_page.php">
+  <label for="fname">Nome:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Sobrenome:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+</form>
             <button>Assistir Agora!</button>
         </div>
     </section>
