--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="img/LOGO.webp" alt="HEFLIX">
         <h1>HeFlix.</h1>
         <h2>Seu Streaming preferido!</h2><br><br><br><br><br><br><br>
+        <div class=box1>
         <div class="box">
             <BR>
             <form action="/action_page.php">
@@ -23,6 +24,7 @@
   <input type="text" id="lname" name="lname"><br><br>
 </form>
             <button>Assistir Agora!</button>
+        </div>
         </div>
     </section>
 </body>
