--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="box">
             <BR>
             <form action="/action_page.php">
-  <label for="fname">Nome:</label>
+  <label for="fname">Email:</label>
   <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Sobrenome:</label>
+  <label for="lname">Senha:</label>
   <input type="text" id="lname" name="lname"><br><br>
 </form>
             <button>Assistir Agora!</button>
