--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class=box1>
         <div class="box">
             <BR>
-            <form action="/action_page.php">
+<p>Nossa plataforma está repleta de filmes e séries premiadas e amada por todos</p>
+            <form>
   <label for="fname">Email:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Senha:</label>
