--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="principal container">
         <img src="img/LOGO.webp" alt="HEFLIX">
-        <h1>HeFlix.</h1>
+        <h1>HE<roxo>FLIX</ROXO></h1>
         <h2>Seu Streaming preferido!</h2><br><br><br><br><br><br><br>
         <div class=box1>
         <div class="box">
